# pydicom

./: .codecov.yml  .codespellrc  .coveragerc  .gitignore  .hgignore  .hgtags  .lgtm.yml  .pep8  .pep8speaks.yml  .pre-commit-config.yaml  .travis.yml  CNAME  CONTRIBUTING.md  Dockerfile-pydicom-gdcm.txt  Dockerfile-pydicom-python3  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  _typos.toml  appveyor.yml  asv.conf.json  circle.yml  dicom.py  fabfile.py  index.html  lgtm.yml  license.txt  mypy.ini  params.json  pyproject.toml  release-checklist.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  codecov.yml  codespell_ignore_words.txt  dependabot.yml
0.9/: genindex.html  getting_started.html  index.html  objects.inv  pydicom_user_guide.html  ref_guide.html  search.html  searchindex.js  transition_to_pydicom1.html  viewing_images.html  working_with_pixel_data.html
1.0/: .buildinfo  base_element.html  genindex.html  getting_started.html  image_data_handlers.html  index.html  objects.inv  pydicom_dev_guide.html  pydicom_user_guide.html  ref_guide.html  release-notes.html  search.html  searchindex.js  transition_to_pydicom1.html  viewing_images.html  working_with_pixel_data.html
1.1/: api_ref.html  base_element.html  genindex.html  ref_guide.html  release-notes.html  searchindex.js  transition_to_pydicom1.html  working_with_pixel_data.html
1.2/: .buildinfo  api_ref.html  base_element.html  genindex.html  getting_started.html  image_data_handlers.html  index.html  objects.inv  py-modindex.html  pydicom_user_guide.html  ref_guide.html  release-notes.html  search.html  searchindex.js  transition_to_pydicom1.html  viewing_images.html  working_with_pixel_data.html  writing_files.html
1.3/: .buildinfo  api_ref.html  base_element.html  genindex.html  getting_started.html  image_data_handlers.html  index.html  objects.inv  private_data_elements.html  py-modindex.html  pydicom_user_guide.html  python2_support.html  ref_guide.html  release-notes.html  search.html  searchindex.js  transition_to_pydicom1.html  viewing_images.html  warn_transition_to_pydicom1.html  working_with_pixel_data.html  writing_files.html
1.4/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
2.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
2.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
2.2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
2.3/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
2.4/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
3.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
benchmarks/: bench_encaps.py  bench_handler_numpy.py  bench_nested_seq.py  bench_pixel_util.py  bench_rle_decode.py  bench_rle_encode.py
dev/: .buildinfo  api_ref.html  base_element.html  faq.html  genindex.html  getting_started.html  image_data_handlers.html  index.html  objects.inv  private_data_elements.html  py-modindex.html  pydicom_dev_guide.html  pydicom_user_guide.html  python2_support.html  ref_guide.html  release-notes.html  search.html  searchindex.js  sg_execution_times.html  transition_to_pydicom1.html  viewing_images.html  warn_transition_to_pydicom1.html  working_with_pixel_data.html  writing_files.html
doc/: Dockerfile  Makefile  README.md  api_ref.rst  base_element.rst  conf.py  faq.rst  fix_search.py  getting_started.rst  image_data_handlers.rst  index.rst  make.bat  private_data_elements.rst  pydicom_dev_guide.rst  pydicom_user_guide.rst  python2_support.rst  ref_guide.rst  release-notes.rst  release-notes.txt  requirements.txt  transition_to_pydicom1.rst  viewing_images.rst  warn_transition_to_pydicom1.rst  working_with_pixel_data.rst  writing_files.rst
docs/: Makefile  conf.py  getting_started.rst  index.rst  make.bat  pydicom_user_guide.rst  ref_guide.rst  release-notes.txt  viewing_images.rst  working_with_pixel_data.rst
examples/: README.txt  dicomtree.py  memory_dataset.py  plot_anonymize.py  plot_dicom_difference.py  show_charset_name.py  write_video_uncompressed.py
pydicom/: README.txt  UID.py  _UID_dict.py  __init__.py  _dicom_dict.py  _private_dict.py  _storage_sopclass_uids.py  _uid_dict.py  _version.py  charset.py  codedict.py  coding.py  color.py  compat.py  config.py  datadict.py  dataelem.py  dataset.py  dicomdir.py  dicomio.py  encaps.py  env_info.py  errors.py  extensions.py  filebase.py  filereader.py  fileset.py  fileutil.py  filewriter.py  framereader.py  jsonrep.py  license.txt  media_storage.py  misc.py  multival.py  sequence.py  tag.py  uid.py  valuerep.py  values.py  (+1 more)
source/: .pep8  MANIFEST  MANIFEST.in  README.txt  fabfile.py  release-checklist.txt  setup.py  tox.ini
stable/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pydicom_user_guide.html  python2_support.html  release-notes.html  search.html  searchindex.js  viewing_images.html  working_with_pixel_data.html  writing_files.html
test/: test_UID.py  test_charset.py  test_dataelem.py  test_dataset.py  test_dictionary.py  test_filereader.py  test_filewriter.py  test_rawread.py  test_tag.py  test_valuerep.py  warncheck.py
tests/: CT_small.dcm.bz2  ExplVR_BigEndNoMeta.dcm.bz2  MR_small.dcm.bz2  OBXXXX1A.dcm.bz2  _write_stds.py  all.bat  badVR.dcm.bz2  color-px.dcm.bz2  conftest.py  emri_small.dcm.bz2  emri_small_big_endian.dcm.bz2  emri_small_jpeg_ls_lossless.dcm.bz2  image_dfl.dcm.bz2  meta_missing_tsyntax.dcm.bz2  nested_priv_SQ.dcm.bz2  no_meta_group_length.dcm.bz2  priv_SQ.dcm.bz2  reportsi_with_empty_number_tags.dcm.bz2  rtplan.dcm.bz2  rtstruct.dcm.bz2  run_tests.py  shell_all  test-SR.dcm.bz2  test_JPEG_LS_transfer_syntax.py  test_UID.py  test_buffer_utils.py  test_charset.py  (+45 more)
(+2796 files in other folders)
