# [build-system]
# requires = ["setuptools"] # , "setuptools-scm"]
# build-backend = "setuptools.build_meta"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
authors = [
    {name = "Darcy Mason and contributors", email = "darcymason@gmail.com"}
]
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries"
]
dependencies = []
description = "A pure Python package for reading and writing DICOM data"
#  dynamic = ["version"]  uncomment for pydicom v3.0
keywords = ["dicom, python, medical, imaging"]
license = {text = "MIT"}
name = "pydicom"
readme = "README.md"
requires-python = ">=3.7"
version = "2.4.2"


[project.optional-dependencies]
docs = [
        "numpy",
        "numpydoc",
        "matplotlib",
        "pillow",
        "sphinx",
        "sphinx_rtd_theme",
        "sphinx-gallery",
        "sphinxcontrib-napoleon",
        "sphinx-copybutton"
]

[project.urls]
documentation = "https://pydicom.github.io/pydicom"
download = "https://github.com/pydicom/pydicom/archive/master.zip"
homepage = "https://github.com/pydicom/pydicom"
repository = "https://github.com/pydicom/pydicom"



[project.scripts]
pydicom = "pydicom.cli.main:main"


[project.entry-points.pydicom_subcommands]
codify = "pydicom.cli.codify:add_subparser"
show = "pydicom.cli.show:add_subparser"


[tool.flit.sdist]
# include = ["pydicom/"]
exclude = ["pydicom/tests"]


[tool.setuptools]
packages.find.include = ['pydicom*']
packages.find.exclude = ['pydicom*tests']
include-package-data = false

[tool.setuptools_scm]
# For pydicom v3.0, uncomment the following line
# write_to = "pydicom/_version.py"


[tool.ruff]
select = [
    "C9",
    "E",
    "F",
    "PL",
    "W",
]
ignore = [
    "E402",
    "F401",
    "F403",
    "F405",
    "F541",
    "F601",
    "F811",
    "F841",
    "PLR5501",
    "PLC1901",
    "PLR2004",
    "PLW0603",
    "PLW2901",
]
line-length = 214
target-version = "py37"

[tool.ruff.mccabe]
max-complexity = 32

[tool.ruff.pylint]
max-args = 17
max-branches = 39
max-returns = 9
max-statements = 106

[tool.ruff.per-file-ignores]
"*/__init__.py" = ["F401"]
"pydicom/config.py" = ["PLW0602"]
